--- a/templates/editprofile.html
+++ b/templates/editprofile.html
@@ -13,7 +13,7 @@
 </div>
 <br>
 <center><h2>Edit Profile Form</h2></center>
-<form action="{% url 'datasets:editprofile' user.id %}" method="post" id="SignUpForm" role="form" style="border:1px solid #ccc">
+<center><form action="{% url 'datasets:editprofile' user.id %}" method="post" id="SignUpForm" role="form" style="border:1px solid #ccc">
   {% csrf_token %}
   <div class="container">
     <h2>First Name</h2>
@@ -42,4 +42,5 @@
       </div>
     </div>
   </form>
+  </center>
   {% endblock %}
