--- a/templates/editrecord.html
+++ b/templates/editrecord.html
@@ -13,7 +13,7 @@
 </div>
 <br>
 <center><h2>Edit Record Form</h2></center>
-<form action="." method="post" style="border:1px solid #ccc" role="form">
+<center><form action="." method="post" style="border:1px solid #ccc" role="form">
   <div class="container">
     <p>This dataset has {{ count }} columns where you can edit data in, following the pattern: {{ cnames }}</p>
     {% csrf_token %}
@@ -26,6 +26,7 @@
       </div>
     </div>
   </div>
+  </center>
 
 </main>
 {% endblock %}
