--- a/templates/datadetail.html
+++ b/templates/datadetail.html
@@ -6,6 +6,10 @@
   tfoot {
    display: table-header-group;
  }
+ div.dataTables_wrapper {
+  width: 800px;
+  margin: 0 auto;
+}
 </style>
 
 <div class="fh5co-hero fh5co-hero-2">
