--- a/templates/base.html
+++ b/templates/base.html
@@ -38,8 +38,8 @@
 	<style>
 		body {
 			overflow: auto;
-			overflow-x: scroll;
-			overflow-y: scroll;
+			overflow-x: auto;
+			overflow-y: auto;
 		}
 
 		#myInput {
