--- a/templates/datadetail.html
+++ b/templates/datadetail.html
@@ -176,7 +176,7 @@ table {
       initComplete: function () {
         this.api().columns().every( function () {
           var column = this;
-          var select = $('<select><option value="">All</option></select>')
+          var select = $('<select><option value="">--all--</option></select>')
           .appendTo( $(column.footer()).empty() )
           .on( 'change', function () {
             var val = $.fn.dataTable.util.escapeRegex(
