--- a/templates/datadetail.html
+++ b/templates/datadetail.html
@@ -143,7 +143,11 @@ table {
     {% for i in database %}
     <tr>
       {% for o in i %}
+      {% if forloop.first %}
+      <td><a href="http://www.google.com/search?q={{o}}&tbm=isch" target="blank">{{o}}</td>
+      {% else %}
       <td>{{o}}</td>
+      {% endif %}
       {% endfor %}
       {% if user == dataset.DataSet_Poster or request.user.is_superuser %}
       <td> 
