--- a/templates/datadetail.html
+++ b/templates/datadetail.html
@@ -173,7 +173,7 @@ table {
 <script>
   $(document).ready(function() {
     var table = $('#example').DataTable( {
-      "scrollY": 200,
+      "scrollY": '50vh',
       "scrollX": true,
       initComplete: function () {
         this.api().columns().every( function () {
