--- a/templates/datadetail.html
+++ b/templates/datadetail.html
@@ -174,6 +174,7 @@ table {
   $(document).ready(function() {
     var table = $('#example').DataTable( {
       "scrollY": '50vh',
+      "scrollCollapse": true,
       "scrollX": true,
       initComplete: function () {
         this.api().columns().every( function () {
