--- a/templates/base.html
+++ b/templates/base.html
@@ -4,7 +4,7 @@
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	
-	<title>{% block title %} TANOM: Datasets Portal{% endblock %}</title> {% load staticfiles %}
+	<title>{% block title %} HALANG: Datasets Portal{% endblock %}</title> {% load staticfiles %}
 
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="description" content="Free HTML5 Template by FREEHTML5.CO" />
@@ -36,12 +36,6 @@
 	<script src="js/respond.min.js"></script>
 	<![endif]-->
 	<style>
-		body {
-			overflow: auto;
-			overflow-x: auto;
-			overflow-y: auto;
-		}
-
 		#myInput {
 			background-image: url('{% static '/css/searchicon.png' %}');
 			background-position: 10px 12px;
@@ -54,7 +48,7 @@
 		}
 
 		input[type=text], input[type=password], input[type=email] {
-			width: 50%;
+			width: 100%;
 			color: black;
 			padding: 12px 20px;
 			margin: 8px 0;
@@ -128,7 +122,7 @@
 					<div class="container">
 						<div class="nav-header">
 							<a href="#" class="js-fh5co-nav-toggle fh5co-nav-toggle"><i></i></a>
-							<h1 id="fh5co-logo"><a href="{% url 'datasets:index' %}">TAN<span>OM</span></a></h1>
+							<h1 id="fh5co-logo"><a href="{% url 'datasets:index' %}">HA<span>LANG</span></a></h1>
 							<!-- START #fh5co-menu-wrap -->
 							<nav id="fh5co-menu-wrap" role="navigation">
 								<ul class="sf-menu" id="fh5co-primary-menu">
@@ -205,7 +199,7 @@
 				</div>
 			</footer>
 
-			<script>
+			<script type="text/javascript" >
 				$(document).ready(function() {
 					$("#notificationLink").click(function() {
 						$("#notificationContainer").fadeToggle(300);
