--- a/templates/deleterecord.html
+++ b/templates/deleterecord.html
@@ -5,7 +5,7 @@
   <div class="fh5co-overlay"></div>
   <div class="fh5co-cover text-center" data-stellar-background-ratio="0.5" style="background-image: url({% static 'images/last.jpg' %});">
     <div class="desc animate-box">
-    <h2>You are currently trying to delete the record: {{ row }}</h2>
+    <h2>You are currently trying to delete the record</h2>
       <span>Make your choice below to delete or not the record.</a></span>
     </div>
   </div>
@@ -17,7 +17,7 @@
   <div class="container">
     {% csrf_token %}
     {{ form.as_p }}
-    <h2 class="section-heading header text_b">Are you sure you want to delete the record:  {{ row }}</h2>
+    <h2 class="section-heading header text_b">Are you sure you want to delete the record?</h2>
     <div class="clearfix">
       <center><button type="submit" class="btn btn-primary">Yes</button></center>
       </div>
