--- a/templates/datadetail.html
+++ b/templates/datadetail.html
@@ -7,7 +7,7 @@
    display: table-header-group;
  }
  div.dataTables_wrapper {
-  width: 1100px;
+  width: 100%;
   margin: 0 auto;
 }
 table {
@@ -192,6 +192,9 @@ table {
           } );
 
           column.data().unique().sort().each( function ( d, j ) {
+            if (d.substring(0, 40) == '<a href="http://www.google.com/search?q=') {
+              d = d.substring(40, d.indexOf('&amp;tbm=isch" target="blank">'));
+            } 
             var cleaned = d.replace("<center>", "")
             var cleaned2 = cleaned.replace("</center>","")
             select.append( '<option value="'+cleaned2+'">'+cleaned2+'</option>' )
